Avance en creacion de proyecto Sakar con PrimeVue 4

--- a/assets/layout/variables/_common.scss
+++ b/assets/layout/variables/_common.scss
@@ -9,7 +9,7 @@
     --surface-overlay: var(--p-overlay-popover-background);
     --transition-duration: var(--p-transition-duration);
     --maskbg: var(--p-mask-background);
-    --content-border-radius: var(--p-content-border-radius);
+    --content-border-radius: 12px;
     --layout-section-transition-duration: 0.2s;
     --element-transition-duration: var(--p-transition-duration);
     --focus-ring-width: var(--p-focus-ring-width);
