--- a/assets/layout/_topbar.scss
+++ b/assets/layout/_topbar.scss
@@ -1,15 +1,16 @@
 .layout-topbar {
     position: fixed;
-    height: 4rem;
+    height: 3.5rem;
     z-index: 997;
     left: 0;
     top: 0;
     width: 100%;
     padding: 0 2rem;
     background-color: var(--surface-card);
-    transition: left var(--layout-section-transition-duration);
+    transition: left var(--transition-duration);
     display: flex;
     align-items: center;
+    box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08);
 
     .layout-topbar-logo-container {
         width: 20rem;
@@ -18,19 +19,20 @@
     }
 
     .layout-topbar-logo {
-        display: inline-flex;
+        display: flex;
         align-items: center;
+        color: var(--surface-900);
         font-size: 1.5rem;
-        border-radius: var(--content-border-radius);
-        color: var(--text-color);
         font-weight: 500;
-        gap: 0.5rem;
+        width: 300px;
+        border-radius: 12px;
 
-        svg {
-            width: 3rem;
+        img {
+            height: 2.5rem;
+            margin-right: .5rem;
         }
 
-        &:focus-visible {
+        &:focus {
             @include focused();
         }
     }
