--- a/assets/layout/_utils.scss
+++ b/assets/layout/_utils.scss
@@ -6,9 +6,19 @@
 }
 
 .card {
-    background: var(--surface-card);
+/*     background: var(--surface-card);
     padding: 2rem;
     margin-bottom: 2rem;
+    border-radius: var(--content-border-radius);
+
+    &:last-child {
+        margin-bottom: 0;
+    } */
+    background: var(--surface-card);
+    border: 1px solid var(--surface-border);
+    padding: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: var(--card-shadow);
     border-radius: var(--content-border-radius);
 
     &:last-child {
