--- a/assets/layout/styles/layout/old/_footer.scss
+++ b/assets/layout/styles/layout/old/_footer.scss
@@ -3,7 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1rem 0 1rem 0;
-    gap: 0.5rem;
+    padding-top: 1rem;
     border-top: 1px solid var(--surface-border);
 }
