--- a/assets/layout/styles/layout/old/_topbar.scss
+++ b/assets/layout/styles/layout/old/_topbar.scss
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08);
-
+    
     .layout-topbar-logo-container {
         width: 20rem;
         display: flex;
@@ -33,9 +33,9 @@
         }
         svg {
             width: 3rem;
-        }
+        }   
 
-        &:focus-visible {
+        &:focus {
             @include focused();
         }
     }
@@ -44,120 +44,160 @@
         display: inline-flex;
         justify-content: center;
         align-items: center;
+        position: relative;
         color: var(--text-color-secondary);
         border-radius: 50%;
-        width: 2.5rem;
-        height: 2.5rem;
-        color: var(--text-color);
-        transition: background-color var(--element-transition-duration);
+        width: 3rem;
+        height: 3rem;
         cursor: pointer;
+        transition: background-color $transitionDuration;
 
         &:hover {
             color: var(--text-color);
             background-color: var(--surface-hover);
         }
 
-        &:focus-visible {
+        &:focus {
             @include focused();
         }
 
         i {
-            font-size: 1.25rem;
+            font-size: 1.5rem;
         }
 
         span {
             font-size: 1rem;
             display: none;
         }
-
-        &.layout-topbar-button-highlight {
+        &.layout-topbar-action-highlight {
             background-color: var(--primary-color);
             color: var(--primary-contrast-color);
         }
     }
 
-    .layout-menu-button {
-        margin-right: 0.5rem;
+    .layout-config-menu {
+        display: flex;
+        gap: 1rem;
     }
-    
+
+    .layout-menu-button {
+        margin-left: 2rem;
+    }
+
+    .layout-topbar-menu-button {
+        display: none;
+
+        i {
+            font-size: 1.25rem;
+        }
+    }
+
     .layout-topbar-menu {
         margin: 0 0 0 auto;
         padding: 0;
         list-style: none;
         display: flex;
-/*         .layout-topbar-button {
+
+        .layout-topbar-button {
             margin-left: 1rem;
-        } */
+        }
+    }
+}
+
+
+.config-panel {
+    .config-panel-label {
+        font-size: 0.875rem;
+        color: var(--text-secondary-color);
+        font-weight: 600;
+        line-height: 1;
     }
 
-    .layout-topbar-menu-button {
-        display: none;
+    .config-panel-colors {
+        > div {
+            padding-top: 0.5rem;
+            display: flex;
+            gap: 0.5rem;
+            flex-wrap: wrap;
+            justify-content: space-between;
+
+            button {
+                border: none;
+                width: 1.25rem;
+                height: 1.25rem;
+                border-radius: 50%;
+                padding: 0;
+                cursor: pointer;
+                outline-color: transparent;
+                outline-width: 2px;
+                outline-style: solid;
+                outline-offset: 1px;
+
+                &.active-color {
+                    outline-color: var(--primary-color);
+                }
+            }
+        }
     }
 
-    .layout-topbar-buttons {
-        margin-left: auto;
+    .config-panel-settings {
         display: flex;
-        gap: 1rem;
-    }
-
-    .layout-topbar-menu-content {
-        display: flex;
-        gap: 1rem;
-    }
-
-    .layout-topbar-menu {
-        display: flex;
-        gap: 1rem;
+        flex-direction: column;
+        gap: 0.5rem;
     }
 }
 
 @media (max-width: 991px) {
     .layout-topbar {
-        padding: 0 2rem;
+        justify-content: space-between;
 
-        .layout-topbar-logo-container {
+        .layout-topbar-logo {
             width: auto;
+            order: 2;
         }
 
         .layout-menu-button {
             margin-left: 0;
-            margin-right: 0.5rem;
+            order: 1;
         }
 
         .layout-topbar-menu-button {
             display: inline-flex;
+            margin-left: 0;
+            order: 3;
         }
 
         .layout-topbar-menu {
+            margin-left: 0;
             position: absolute;
+            flex-direction: column;
             background-color: var(--surface-overlay);
-            transform-origin: top;
-            box-shadow:
-                0px 3px 5px rgba(0, 0, 0, 0.02),
-                0px 0px 2px rgba(0, 0, 0, 0.05),
-                0px 1px 4px rgba(0, 0, 0, 0.08);
-            border-radius: var(--content-border-radius);
+            box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08);
+            border-radius: 12px;
             padding: 1rem;
             right: 2rem;
-            top: 4rem;
+            top: 5rem;
             min-width: 15rem;
-            border: 1px solid var(--surface-border);
+            display: none;
+            -webkit-animation: scalein 0.15s linear;
+            animation: scalein 0.15s linear;
 
-            .layout-topbar-menu-content {
-                gap: 0.5rem;
+            &.layout-topbar-menu-mobile-active {
+                display: block
             }
 
             .layout-topbar-button {
+                margin-left: 0;
                 display: flex;
                 width: 100%;
                 height: auto;
                 justify-content: flex-start;
-                border-radius: var(--content-border-radius);
-                padding: 0.5rem 1rem;
+                border-radius: 12px;
+                padding: 1rem;
 
                 i {
                     font-size: 1rem;
-                    margin-right: 0.5rem;
+                    margin-right: .5rem;
                 }
 
                 span {
@@ -165,10 +205,6 @@
                     display: block;
                 }
             }
-        }
-
-        .layout-topbar-menu-content {
-            flex-direction: column;
         }
     }
 }
