--- a/assets/layout/styles/layout/old/_typography.scss
+++ b/assets/layout/styles/layout/old/_typography.scss
@@ -1,14 +1,9 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     margin: 1.5rem 0 1rem 0;
     font-family: inherit;
-    font-weight: 700;
-    line-height: 1.5;
-    color: var(--text-color);
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--surface-900);
 
     &:first-child {
         margin-top: 0;
@@ -40,16 +35,16 @@ h6 {
 }
 
 mark {
-    background: #fff8e1;
-    padding: 0.25rem 0.4rem;
-    border-radius: var(--content-border-radius);
+    background: #FFF8E1;
+    padding: .25rem .4rem;
+    border-radius: $borderRadius;
     font-family: monospace;
 }
 
 blockquote {
     margin: 1rem 0;
     padding: 0 2rem;
-    border-left: 4px solid #90a4ae;
+    border-left: 4px solid #90A4AE;
 }
 
 hr {
