--- a/assets/layout/styles/layout/_main.scss
+++ b/assets/layout/styles/layout/_main.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     min-height: 100vh;
     justify-content: space-between;
-    padding: 5rem 2rem 2rem 4rem;
+    padding: 5rem 2rem 0 3rem;
     transition: margin-left $transitionDuration;
 }
 
