--- a/assets/layout/styles/layout/_topbar.scss
+++ b/assets/layout/styles/layout/_topbar.scss
@@ -53,7 +53,6 @@
         cursor: pointer;
 
         &:hover {
-            color: var(--text-color);
             background-color: var(--surface-hover);
         }
 
@@ -174,6 +173,9 @@
 }
 
 .config-panel {
+
+    background-color: var(--surface-card);
+
     .config-panel-label {
         font-size: 0.875rem;
         color: var(--text-secondary-color);
@@ -190,6 +192,7 @@
             justify-content: space-between;
 
             button {
+                margin-top: 5rem;
                 border: none;
                 width: 1.25rem;
                 height: 1.25rem;
